# doubao_analyzer

./: .gitignore  API_README.md  CMakeLists.txt  LOAD_BALANCING_README.md  README.md  csv_cleaner.py  csv_cleaner_enhanced.py  diagnose_load_balancer.sh  fix_nginx_config.sh  image_processing_optimization.md  install_deps.sh  nginx_config.conf  setup.sh  start_api_services.sh  stop_api_services.sh  video_optimization_recommendations.md  视频处理优化方案.md
docs/: API_TECHNICAL_GUIDE.md  API_TECHNICAL_GUIDE_PART2.md  API_TECHNICAL_GUIDE_PART3.md  API_TECHNICAL_GUIDE_PART4.md  API_TECHNICAL_GUIDE_PART5.md  EXCEL_PROCESSING.md  OLLAMA_OPTIMIZATION.md  USER_MANUAL.md
include/: ApiServer.hpp  ConfigManager.hpp  CurlConnectionPool.hpp  DatabaseConnectionPool.hpp  DatabaseManager.hpp  DoubaoMediaAnalyzer.hpp  ExcelProcessor.hpp  GPUManager.hpp  Jwt.hpp  RefreshTokenStore.hpp  TaskManager.hpp  VideoKeyframeAnalyzer.hpp  config.hpp  utils.hpp
scripts/: app_t4_optimized.sh  backup_database.sh  check_gpu_env.sh  check_ollama_gpu.sh  docker_gpu_ollama.sh  fix_csv_to_xlsx.sh  fix_csv_to_xlsx_final.sh  fix_csv_to_xlsx_simple.sh  fix_excel_processor.sh  fix_gpu_detection.sh  fix_local_ollama.sh  fix_python_command.sh  fix_update_excel_tags.sh  force_gpu_reset.sh  init_database.sql  install_python_deps.sh  integrate_db_analysis.sh  ollama_check_gpu.sh  ollama_optimized.sh  ollama_optimized_t4.sh  ollama_optimized_t4_ext.sh  ollama_t4_debug.sh  ollama_t4_optimized.sh  optimize_system.sh  restore_database.sh  simple_fix.sh  simple_gpu_ollama.sh  start_optimized.sh  test_gpu_usage.sh
src/: ApiServer.cpp  ApiServer.cpp.bak  ApiServer_batch.cpp  ConfigManager.cpp  CurlConnectionPool.cpp  DatabaseConnectionPool.cpp  DatabaseManager.cpp  DatabaseManager_extended.cpp  DoubaoMediaAnalyzer.cpp  DoubaoMediaAnalyzer_db.cpp  ExcelProcessor.cpp  GPUManager.cpp  Jwt.cpp  RefreshTokenStore.cpp  TaskManager.cpp  VideoKeyframeAnalyzer.cpp  api_main.cpp  config.cpp  main.cpp  utils.cpp
